# weekly-stock-digest

./: .env.example  .gitignore  Chat-history.md  README.md  dashboard.html  progress-tracker.md  pyproject.toml
data/: sp500_historical.csv
docs/superpowers/plans/: 2026-05-30-phase1-ingestion.md  2026-06-02-phase2-event-extraction.md
docs/superpowers/specs/: 2026-05-30-phase1-ingestion-design.md  2026-06-02-dashboard-design.md  2026-06-02-phase2-event-extraction-design.md
src/wsd/: config.py  db.py  utils.py
src/wsd/extraction/: claude.py  downloader.py  run.py
src/wsd/extraction/parsers/: base.py  filing_10k.py  filing_10q.py  filing_8k.py  form4.py
src/wsd/ingestion/: edgar.py  prices.py  universe.py
src/wsd/quality/: checks.py
supabase/migrations/: 20260530000001_phase1_data_foundation.sql  20260530000002_fix_companies_unique_constraint.sql  20260530000003_add_quality_check_helpers.sql  20260602000004_phase2_event_extraction.sql
tests/: test_10k_parser.py  test_10q_parser.py  test_8k_parser.py  test_checks.py  test_config.py  test_db.py  test_downloader.py  test_edgar.py  test_extraction_run.py  test_form4_parser.py  test_prices.py  test_universe.py  test_utils.py
