[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsd"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.0",
    "yfinance>=0.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wsd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
